IAC-796 Upgrade VCD archetype to support Angular 15
Signed-off-by: Vladislav Ganev <gvladislav@vmware.com>

--- a/maven/archetypes/vcd-ng-angular8/src/main/resources/archetype-resources/src/public/manifest.json
+++ b/maven/archetypes/vcd-ng-angular8/src/main/resources/archetype-resources/src/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "urn": "URN_PLACEHOLDER",
-    "name": "NAME_PLACEHOLDER",
+    "urn": "vmware:vcloud:${projectName}",
+    "name": "${groupId}.${artifactId}",
     "containerVersion": "10.0.0",
     "version": "VERSION_PLACEHOLDER",
     "scope": ["tenant","service-provider"],
