--- a/maven/archetypes/vcd-ng/src/main/resources/archetype-resources/package.json
+++ b/maven/archetypes/vcd-ng/src/main/resources/archetype-resources/package.json
@@ -1,68 +1,37 @@
 {
-  "name": "${projectHeading}",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "clean": "rimraf target",
-    "build": "webpack"
-  },
-  "license": "VMware Confidential",
-  "dependencies": {
-    "@angular-devkit/core": "8.3.19",
-    "@angular-devkit/schematics": "8.3.19",
-    "@angular/animations": "8.2.8",
-    "@angular/common": "8.2.8",
-    "@angular/core": "8.2.8",
-    "@angular/forms": "8.2.8",
-    "@angular/http": "7.2.15",
-    "@angular/platform-browser": "8.2.8",
-    "@angular/platform-browser-dynamic": "8.2.8",
-    "@angular/router": "8.2.8",
-    "@clr/angular": "2.3.8",
-    "@clr/icons": "2.3.8",
-    "@clr/ui": "2.3.8",
-    "@ngrx/core": "1.2.0",
-    "@ngrx/effects": "6.0.1",
-    "@ngrx/store": "6.0.1",
-    "@vcd/bindings": "9.1.1",
-    "@vcd/sdk": "0.11.0",
-    "@webcomponents/custom-elements": "1.2.1",
-    "core-js": "2.5.1",
-    "es6-shim": "0.35.3",
-    "mutationobserver-shim": "0.3.2",
-    "reflect-metadata": "0.1.10",
-    "reselect": "3.0.0",
-    "rxjs": "6.5.3",
-    "rxjs-compat": "6.5.3",
-    "web-animations-js": "2.3.1",
-    "zone.js": "0.10.2"
-  },
-  "devDependencies": {
-    "@types/jasmine": "2.5.47",
-    "@types/node": "14.0.1",
-    "angular2-template-loader": "0.6.2",
-    "autoprefixer": "9.3.1",
-    "awesome-typescript-loader": "5.2.1",
-    "copy-webpack-plugin": "5.0.3",
-    "css-loader": "1.0.0",
-    "cssnano": "4.1.10",
-    "exports-loader": "0.7.0",
-    "fast-xml-parser": "3.16.0",
-    "file-loader": "2.0.0",
-    "fs-extra": "9.0.0",
-    "happypack": "5.0.0",
-    "node-sass": "4.14.1",
-    "postcss": "7.0.5",
-    "postcss-loader": "3.0.0",
-    "postcss-url": "8.0.0",
-    "raw-loader": "0.5.1",
-    "rimraf": "2.6.1",
-    "sass-loader": "7.1.0",
-    "tslint": "4.5.1",
-    "typescript": "3.9.2",
-    "webpack": "4.22.0",
-    "webpack-cli": "3.1.2",
-    "webpack-sources": "1.4.3",
-    "zip-webpack-plugin": "3.0.0"
-  }
+	"name": "${projectHeading}",
+	"version": "1.0.0",
+	"description": "",
+	"scripts": {
+		"clean": "rimraf target",
+		"build": "ng build",
+		"prebuild": "node scripts/build-process.ts prebuild",
+		"postbuild": "node scripts/build-process.ts postbuild"
+	},
+	"license": "VMware Confidential",
+	"dependencies": {
+		"@angular/animations": "15.2.0",
+		"@angular/common": "15.2.0",
+		"@angular/compiler": "15.2.0",
+		"@angular/core": "15.2.0",
+		"@angular/forms": "15.2.0",
+		"@angular/platform-browser": "15.2.0",
+		"@angular/platform-browser-dynamic": "15.2.0",
+		"@angular/router": "15.2.0",
+		"@cds/core": "6.3.1",
+		"@clr/angular": "15.0.3",
+		"@clr/ui": "15.0.3",
+		"@vcd/bindings": "9.1.1",
+		"@vcd/i18n": "12.0.0",
+		"@vcd/plugin-builders": "15.0.1",
+		"@vcd/sdk": "15.0.2",
+		"rxjs": "7.8.0",
+		"tslib": "2.3.0",
+		"zone.js": "0.12.0"
+	},
+	"devDependencies": {
+		"@angular/cli": "15.2.3",
+    	"fast-xml-parser": "4.3.2",
+		"typescript": "4.9.4"
+	}
 }
