--- a/maven/archetypes/vcd-ng/src/main/resources/archetype-resources/tsconfig.json
+++ b/maven/archetypes/vcd-ng/src/main/resources/archetype-resources/tsconfig.json
@@ -1,22 +1,21 @@
 {
-    "compileOnSave": true,
-    "compilerOptions": {
-        "target": "es5",
-        "module": "es2015",
-        "moduleResolution": "node",
-        "lib": ["es2015", "dom"],
-        "sourceMap": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "removeComments": false,
-        "noImplicitAny": true,
-        "suppressImplicitAnyIndexErrors": true,
-        "typeRoots": [
-            "./node_modules/@types"
-        ]
-    },
-    "exclude": [
-        "node_modules",
-        "target"
-    ]
+	"compileOnSave": true,
+	"compilerOptions": {
+		"target": "ES2022",
+		"module": "esnext",
+		"moduleResolution": "node",
+		"lib": ["ES2022", "dom"],
+		"sourceMap": true,
+		"declaration": false,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"removeComments": false,
+		"noImplicitAny": true,
+		"resolveJsonModule": true,
+		"allowSyntheticDefaultImports": true,
+		"skipLibCheck": true,
+		"typeRoots": ["./node_modules/@types"],
+		"baseUrl": "./"
+	},
+	"exclude": ["node_modules", "target"]
 }
